# DSA-project-search-engine

./: .gitignore  ARCHITECTURE.md  DATA_PIPELINE.md  DYNAMIC_UPLOAD_GUIDE.md  QUICK_START.md  README.md  package-lock.json  run-app.bat  run-app.ps1  server-control.sh
backend/: .gitignore  CMakeLists.txt  README.md  config.json  requirements.txt
backend/app/: main.py
backend/cpp/: bindings.cpp  engine.cpp  engine.hpp
backend/cpp/include/: engine.hpp  forward_index.hpp  lexicon.hpp
backend/cpp/src/: bindings.cpp  build_forward_index.cpp  build_inverted_index.cpp  build_lexicon.cpp  engine.cpp  forward_index.cpp  lexicon.cpp  test_search.cpp
backend/data/processed/: .gitkeep  check.py  cleaned.jsonl  cleaned_with_body.jsonl  docid_to_url.json  forward_index.json  lexicon.json  test_raw.jsonl.cursor  unzipper.py  verifyy.py
backend/data/processed/barrels/: inverted_barrel_0.json  inverted_barrel_1.json  inverted_barrel_10.json  inverted_barrel_11.json  inverted_barrel_12.json  inverted_barrel_13.json  inverted_barrel_14.json  inverted_barrel_15.json  inverted_barrel_16.json  inverted_barrel_17.json  inverted_barrel_18.json  inverted_barrel_19.json  inverted_barrel_2.json  inverted_barrel_20.json  inverted_barrel_21.json  inverted_barrel_22.json  inverted_barrel_23.json  inverted_barrel_24.json  inverted_barrel_25.json  inverted_barrel_26.json  inverted_barrel_27.json  inverted_barrel_28.json  inverted_barrel_29.json  inverted_barrel_3.json  inverted_barrel_30.json  inverted_barrel_31.json  inverted_barrel_32.json  inverted_barrel_33.json  inverted_barrel_34.json  inverted_barrel_35.json  inverted_barrel_36.json  inverted_barrel_37.json  inverted_barrel_38.json  inverted_barrel_39.json  inverted_barrel_4.json  inverted_barrel_40.json  inverted_barrel_41.json  inverted_barrel_42.json  inverted_barrel_43.json  inverted_barrel_44.json  (+60 more)
backend/data/temp_json/: temp_1314.json
backend/include/: BatchIndexWriter.hpp  DocumentMetadata.hpp  LexiconWithTrie.hpp  PDFProcessingPool.hpp  PDFProcessor.hpp  RankingScorer.hpp  SearchController.hpp  SearchService.hpp  SemanticScorer.hpp  Trie.hpp  doc_url_mapper.hpp  forward_index.hpp  inverted_index.hpp  lexicon.hpp
backend/scripts/: async_fetch_pdfs.py  build_docid_to_url.py  build_semantic_vectors.py  crawl_pdf.py  extract_metadata.py  getData.py  parse_from_local.py  renumber_docs.py  test.py  tokenize_single_pdf.py
backend/server/: main.py  preprocess.py
backend/src/: BatchIndexWriter.cpp  DocumentMetadata.cpp  LexiconWithTrie.cpp  PDFProcessingPool.cpp  PDFProcessor.cpp  RankingScorer.cpp  SearchService.cpp  SemanticScorer.cpp  Trie.cpp  build_forward_index.cpp  build_inverted_index.cpp  build_lexicon.cpp  doc_url_mapper.cpp  forward_index.cpp  inverted_index.cpp  lexicon.cpp  main.cpp  test_autocomplete.cpp  test_search.cpp
backend/src/controllers/: SearchController.cpp
backend/static/: index.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/Components/: CardSwap.css  CardSwap.jsx  PDFUpload.css  PDFUpload.jsx  SearchBar.css  SearchBar.jsx  SearchResults.css  SearchResults.jsx  SlidingCard.css  SlidingCard.jsx
frontend/src/config/: api.js
frontend/src/hooks/: useAutocomplete.js
